# yesterdays-wisdom

./: .gitignore  Makefile  TODO.md  local_entry.py  main.py  pyproject.toml  requirements.txt
OLD/daily_emailer/: .main.py.swp  main.py
OLD/notion/: notion_page.py
components/featurisation/: embedding_model.py  featurisation.py  llm_agent.py
components/local_files_walker/: local_files.py  test_local_files.py
components/tests/test_transcription/transcription_files/: 14.750x 1(14).txt  Business strategy and SDGs(1).txt  Business_strategy_and_SDGs1.md  Case_Studies_and_Theory_Development11.md  Financial_Accounting16.md
components/transcribe_notes/: config_categorization.py  config_transcription.py  get_notes.py  main.py
components/transcribe_notes/examples/: 14.740x 1(15).txt  Berlin(1).txt  Introduction to mathematical thinking(10).txt
components/transcribe_notes/test_transcription/transcription_files/: Berlin1.md  (+9 more)
config/: config_logger.py  settings.py
daily-emailer/: gmail_utils.py  notion_utils.py
database/: node.py  sqlite_manager.py
database/data_integrations/notion/: notion.py  notion_config.py  notion_page.py
database/data_integrations/onedrive_files/: desc.txt  local_files.py
database/data_management/: notion.py
objects/: node.py
tests/: _test_notion_integration.py  test_local_integration.py  test_transcription.py
utils/: llm.py  objects.py
utils/llm_utils/: embedding_model.py  featurise_nodes.py  llm.py
utils/llm_utils/prompts/: coding_prompt.txt  math_prompt.txt  prompts.py  study_prompt.txt  summary_prompt.txt  writing_prompt.txt
